<resources>
    <string-array name="gender_array">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
    <string name="app_name">UwU</string>
    <string name="rent_car">Five Superman Brother</string>
    <string name="wel_come">Welcome</string>
    <string name="please_login_with_your_information">Please login with your information</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or login with</string>
    <string name="email">Email</string>
    <string name="create_a_account">Create A Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="sign_in">Sign In</string>
    <string name="already_s_have_an_account_login_now">Already\'s Have An Account? Login Now</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version_app">Ver 1.0</string>
    <string name="call_support">Call</string>
    <string name="message_support">Message</string>
    <string name="hotline_support">Need a support? Call or message to us for a help</string>
    <string name="t_i_kho_n_c_a_t_i">Tài khoản của tôi</string>
    <string name="qu_t_ng">Quà tặng</string>
    <string name="gi_y_ph_p_l_i_xe">Giấy phép lái xe</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="search_hint">Tìm kiếm ở đây</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="user_keyword">Người dùng</string>
    <string name="i_m_t_kh_u">Đổi Mật Khẩu</string>
    <string name="title_activity_maps_shipper">MapsActivityShipper</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="vehicle_keyword">Xe</string>
    <string name="order_keyword">Đơn hàng</string>
    <string name="birthday">Birthday</string>
    <string name="instruction1">1. Tìm kiếm dịch vụ cho thuê xe:\n  •Sử dụng các ứng dụng di động hoặc trang web của các công ty cho thuê xe như Grab, Gojek, hoặc các công ty địa phương.\n  •Bạn cũng có thể tìm kiếm các dịch vụ cho thuê xe uy tín trên Google hoặc các mạng xã hội.\n2. Lựa chọn loại xe và dịch vụ:\n  •Chọn loại xe phù hợp với nhu cầu của bạn: xe máy, ô tô, xe tải, v.v.\n  •Xem xét các gói dịch vụ như thuê theo giờ, theo ngày, hoặc dài hạn.\n3. Kiểm tra giá cả và điều kiện thuê:\n  •So sánh giá cả giữa các nhà cung cấp để tìm được mức giá tốt nhất.\n  •Đọc kỹ các điều khoản và điều kiện thuê, bao gồm chính sách hủy bỏ, phí phụ thu, và bảo hiểm.\n4. Đặt xe:\n  •Điền thông tin cá nhân và chi tiết thuê xe theo yêu cầu của nhà cung cấp.\n  •Xác nhận đặt xe và thanh toán qua các phương thức thanh toán hỗ trợ (thẻ tín dụng, chuyển khoản, ví điện tử, v.v.).\n5. Nhận xe:\n  •Đến địa điểm nhận xe theo thỏa thuận hoặc yêu cầu giao xe tận nơi.\n  •Kiểm tra tình trạng xe trước khi nhận, chụp ảnh hoặc quay video nếu cần thiết.\n6. Trả xe:\n  •Trả xe đúng thời gian và địa điểm đã thỏa thuận.\n  •Kiểm tra và đảm bảo rằng xe không bị hư hỏng hoặc mất mát tài sản.\n\n</string>
    <string name="instruction2"><![CDATA[1. Chọn phương thức thanh toán\n2. Thanh toán\n3. Chúc mừng bạn đã thanh toán <3]]></string>
    <string name="company_info_company">Thông tin công ty:\n-Là 1 công ty tiềm năng</string>
    <string name="secure">Bảo mật is good</string>
    <string name="qA">Những câu hỏi thường gặp:\n1. App này tên gì\n2. Thanh toán thế nào\n3. Donate</string>
    <string name="policy">Chính sách:\n1. Tôn trọng app\n2. không copy dưới mọi hình thức!</string>

</resources>