<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".Screen.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-30dp"
        android:alpha="0.2"
        android:background="@color/xam" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="28dp"
        tools:ignore="UseCompoundDrawables">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/rent_car"
            android:textColor="@color/White"
            android:textSize="32sp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp"
        android:alpha="0.85">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/xam"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints="name"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:textSize="12sp"
                    app:endIconMode="clear_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints="name"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:textSize="12sp"
                    app:endIconMode="clear_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="12sp"
                    app:endIconMode="clear_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_Sign_Up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints="password"
                    android:textSize="12sp"
                    app:endIconMode="password_toggle"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_Sign_Up_Confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints="password"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textSize="12sp"
                    app:endIconMode="password_toggle"/>

            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_Up"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sign_up"
                app:cornerRadius="32dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/go_back_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:gravity="center"
                android:text="@string/already_s_have_an_account_login_now"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>